--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,3 +1,7 @@
+disabled_rules:
+  - switch_case_alignment
+  - unneeded_break_in_switch
+  - multiple_closures_with_trailing_closure
 excluded:
   - Pods
 line_length:
